--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -289,3 +289,6 @@ $ad-embed-width: 300px;
 $ad-embed-height: 250px;
 $ad-halfpage-width: 300px;
 $ad-halfpage-height: 600px;
+
+// touch targets
+$touch-target-minimum-size: 44px;
